--- a/css/overrides.css
+++ b/css/overrides.css
@@ -45,3 +45,20 @@ div.box.shell {
 .reveal .slides section .fragment {
     position: relative;
 }
+.left {
+    left:-8.33%;
+    text-align: left;
+    float: left;
+    width:50%;
+    z-index:-10;
+  }
+  
+.right {
+    left:31.25%;
+    top: 75px;
+    float: right;
+    text-align: right;
+    z-index:-10;
+    width:50%;
+}
+  
